--- a/public/css/_secret.scss
+++ b/public/css/_secret.scss
@@ -1,62 +1,61 @@
-#secretPage{
-	display:flex;
-	flex-direction:column;
-
-	width: 100vw;
-	form{
-		margin:0 auto;
-		margin-bottom:10vh;
-		width:80vw;
-	}
-	section.controls{
-		width:80vw;
-		margin:0 auto;
-		display:flex;
-		align-items: center;
-		form{
-
-			width:40vw;
-
-			h1{
-				width:20vw;
-				text-align:center;
-
-				textarea{
-					width:20vw;
-					margin-top:1vh;
-					margin-bottom:2vh;
-				}
-				input{
-
-					width:20vw;
-					margin-top:1vh;
-					margin-bottom:2vh;
-				}
-
-			}
-			button{
-
-			}
-		}
-	}
-	section.container{
-
-		width:80vw;
-		margin:0 auto;
-		table{
-			margin-bottom:5vh;
-				tbody{
-					tr{
-							width:35vw;
-							height:5vh;
-						td{
-							border:1px solid black;
-							height:5vh;
-							width:10vw;
-							padding:1vh;
-						}
-				}
-			}
-		}
-	}
+#secretPage {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 100vw;
+    form {
+        margin: 0 auto;
+        margin-bottom: 10vh;
+        width: 80vw;
+    }
+    section.controls {
+        width: 80vw;
+        margin: 0 auto;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
+        form {
+            width: 40vw;
+            h1 {
+                width: 20vw;
+                text-align: center;
+                textarea {
+                    width: 20vw;
+                    margin-top: 1vh;
+                    margin-bottom: 2vh;
+                }
+                input {
+                    width: 20vw;
+                    margin-top: 1vh;
+                    margin-bottom: 2vh;
+                }
+            }
+            button {}
+        }
+    }
+    section.container {
+        width: 80vw;
+        margin: 0 auto;
+        table {
+            margin-bottom: 5vh;
+            tbody {
+                tr {
+                    width: 35vw;
+                    height: 5vh;
+                    td {
+                        border: 1px solid black;
+                        height: 5vh;
+                        width: 10vw;
+                        padding: 1vh;
+                    }
+                }
+            }
+        }
+    }
 }
