--- a/public/css/animate.css
+++ b/public/css/animate.css
@@ -96,7 +96,8 @@ Copyright (c) 2015 Daniel Eden
   -webkit-animation-name: bounce;
   animation-name: bounce;
   -webkit-transform-origin: center bottom;
-  transform-origin: center bottom;
+  -ms-transform-origin: center bottom;
+      transform-origin: center bottom;
 }
 
 @-webkit-keyframes flash {
@@ -339,7 +340,8 @@ Copyright (c) 2015 Daniel Eden
 
 .swing {
   -webkit-transform-origin: top center;
-  transform-origin: top center;
+  -ms-transform-origin: top center;
+      transform-origin: top center;
   -webkit-animation-name: swing;
   animation-name: swing;
 }
@@ -572,7 +574,9 @@ Copyright (c) 2015 Daniel Eden
             animation-name:jello;
     -webkit-transform-origin: center;
 
-            transform-origin: center
+            -ms-transform-origin: center;
+
+        transform-origin: center
 }
 
 @-webkit-keyframes bounceIn {
