--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -11,12 +11,29 @@
 @import "_about.scss";
 @import "animate.css";
 @import "_secret.scss";
-//fontbox
-//font-family: 'Roboto Condensed', sans-serif
-//font-family: 'Open Sans Condensed', sans-serif
-// font-family: 'Walter Turncoat', cursive;
-// font-family: 'Patrick Hand SC', cursive;
-// font-family: 'Titillium Web', sans-serif;
-// font-family: 'Sintony', sans-serif;
-// font-family: 'Amatic SC', cursive;
-// font-family: 'Julius Sans One', sans-serif;
+
+/*fontbox*/
+
+
+/*font-family: 'Roboto Condensed', sans-serif*/
+
+
+/*font-family: 'Open Sans Condensed', sans-serif*/
+
+
+/* font-family: 'Walter Turncoat', cursive;*/
+
+
+/* font-family: 'Patrick Hand SC', cursive;*/
+
+
+/* font-family: 'Titillium Web', sans-serif;*/
+
+
+/* font-family: 'Sintony', sans-serif;*/
+
+
+/* font-family: 'Amatic SC', cursive;*/
+
+
+/* font-family: 'Julius Sans One', sans-serif;*/
