replaced dummy data with real hosted site for group proj

--- a/public/html/views/about.pug
+++ b/public/html/views/about.pug
@@ -6,7 +6,7 @@
 
 				article(data-wow-duration="1s").wow.fadeIn
 					h2 Hi I'm Josh Peterson
-					h4 I'm a student at DevMountain.
+					h4 I'm a recent graduate of Devmountain
 					h4 Honing my Web Development skills.
 		section.body
 			article(data-wow-delay="2.2s").wow.fadeIn
@@ -15,8 +15,8 @@
 						li
 							h4 GitHub
 					a(href="https://www.linkedin.com/in/josh-peterson-b9093910b", title="Linkedin", target="_blank")
-							li
-								h4 Linkedin
+						li
+							h4 Linkedin
 					a(href="https://twitter.com/joshpdev", title="Twitter", target="_blank")
 						li
 							h4 Twitter
