--- a/public/html/views/home.html
+++ b/public/html/views/home.html
@@ -1,26 +1,1 @@
-
-<div id="home">
-  <div class="wow fadeInRight" id="aboutMe" data-wow-duration="1s" data-wow-delay=".5s">
-    <header><a ui-sref="/about" title="About">
-        <h1>ABOUT ME</h1></a></header>
-    <article><img src="https://avatars3.githubusercontent.com/u/16170598?v=3&amp;s=460" alt="A picture of me"/>
-      <div class="content">
-        <p>I'm a beginner Web Developer, currently attending DevMountain.</p><a ui-sref="/contact">
-          <p>CONTACT ME</p></a>
-      </div>
-    </article>
-  </div>
-  <div class="container">
-    <div class="post wow fadeInLeft" ng-repeat="item in posts" data-wow-duration="1.2s">
-      <div class="topSection">
-        <header>
-          <h1>{{item.posttitle}}</h1>
-          <h4>{{item.posttime}}</h4>
-        </header><img src="{{item.postimgsrc}}" alt="{{item.postimgalt}}"/>
-      </div>
-      <article>
-        <p>{{item.posttext}}</p>
-      </article>
-    </div>
-  </div>
-</div>
+<div id="home"><div class="wow fadeInRight" id="aboutMe" data-wow-duration="1s" data-wow-delay=".5s"><header><a ui-sref="/about" title="About"><h1>ABOUT ME</h1></a></header><article><img src="https://avatars3.githubusercontent.com/u/16170598?v=3&amp;s=460" alt="A picture of me"/><div class="content"><p>I'm a beginner Web Developer, currently attending DevMountain.</p><a ui-sref="/contact"><p>CONTACT ME</p></a></div></article></div><div class="container"><div class="post wow fadeInLeft" ng-repeat="item in posts" data-wow-duration="1.2s"><div class="topSection"><header><h1>{{item.posttitle}}</h1><h4>{{item.posttime}}</h4></header><img src="{{item.postimgsrc}}" alt="{{item.postimgalt}}"/></div><article><p>{{item.posttext}}</p></article></div></div></div>
