--- a/public/html/views/proj.html
+++ b/public/html/views/proj.html
@@ -1,31 +1,1 @@
-
-<div id="projPage">
-  <div class="card">
-    <section class="body"><img class="vert vert2 wow fadeInLeft" src="./img/bNural-2.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.85s"/><img class="hor hor1 wow fadeInLeft" src="./img/bNural-3.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.65s"/><img class="vert vert1 wow fadeInLeft" src="./img/bNural.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.45s"/>
-      <article class="wow fadeIn" data-wow-duration="1s">
-        <h4>bNural</h4>
-        <p>Is a site that I built for my no-server project at DevMountain.</p>
-        <p>It allows the user to generate Binaural beats to control their mood.</p>
-      </article>
-    </section>
-  </div>
-  <div class="card">
-    <section class="body"><img class="vert vert2 wow fadeInLeft" src="./img/hipster-3.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.85s"/><img class="hor hor1 wow fadeInLeft" src="./img/hipster-2.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.65s"/><img class="vert vert1 wow fadeInLeft" src="./img/hipster-1.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.45s"/>
-      <article class="wow fadeIn" data-wow-duration="1s">
-        <h4>KomBucha.co</h4>
-        <p>Kombucha retro actually, locavore sriracha franzen chia gentrify shabby chic drinking vinegar mustache quinoa twee pabst.</p>
-        <p>Letterpress helvetica man braid, hammock waistcoat slow-carb forage tofu</p>
-      </article>
-    </section>
-  </div>
-  <div class="card">
-    <section class="body"><img class="vert vert2 wow fadeInLeft" src="./img/beard-2.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.85s"/><img class="hor hor1 wow fadeInLeft" src="./img/beard-1.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.65s"/><img class="vert vert1 wow fadeInLeft" src="./img/beard-3.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.45s"/>
-      <article class="wow fadeIn" data-wow-duration="1s">
-        <h4>Mustach.io</h4>
-        <p>Dolor sit amet clive dunn karl marx bad guy walrus.</p>
-        <p>Leader of men fox hunting chevron. Hair trimmer hungarian timothy dalton quis handsome, hair trimmer quis brandy hungarian.</p>
-        <p>Socially mobile gentleman timothy dalton handsome saddam hussein face broom.</p>
-      </article>
-    </section>
-  </div>
-</div>
+<div id="projPage"><div class="card"><section class="body"><img class="vert vert2 wow fadeInLeft" src="./img/bNural-2.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.85s"/><img class="hor hor1 wow fadeInLeft" src="./img/bNural-3.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.65s"/><img class="vert vert1 wow fadeInLeft" src="./img/bNural.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.45s"/><article class="wow fadeIn" data-wow-duration="1s"><h4>BeNeural.com</h4><p>A bi-neural beat generator</p><p>Uses the web audio api to create oscillating sine waves that can affect the user's mental state.</p><p>Provides a free alternative to high data usage video streams.</p></article></section></div><div class="card"><section class="body"><a href="http://PhotographyPortfolio.org" target="_blank"><img class="vert vert2 wow fadeInLeft" src="./img/picOne.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.85s"/></a><a href="http://PhotographyPortfolio.org" target="_blank"><img class="hor hor1 wow fadeInLeft" src="./img/picTwo.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.65s"/></a><a href="http://PhotographyPortfolio.org" target="_blank"><img class="vert vert1 wow fadeInLeft" src="./img/picThree.png" alt="A broken pic.." data-wow-duration="0.4s" data-wow-delay="0.45s"/></a><article class="wow fadeIn" data-wow-duration="1s"><a href="http://PhotographyPortfolio.org" target="_blank"><h4>PhotographyPortfolio.org</h4></a><p>A project I built, with a team of 3 other students at devmountain.</p><p>It allows photographers to exhibit their work and have it be visible to local clients.</p><p>Uses angular to create a seamless experience.</p><p>Talks to the google maps api to filter search results by location.</p></article></section></div></div>
