--- a/public/html/views/secret.html
+++ b/public/html/views/secret.html
@@ -1,72 +1,1 @@
-
-<div id="secretPage">
-  <section class="controls">
-    <form>
-      <h1>posttext
-        <textarea ng-model="text" rows="8" cols="40"></textarea>
-      </h1>
-      <h1>posttitle
-        <input type="text" ng-model="title"/>
-      </h1>
-      <h1>posttime
-        <input type="text" ng-model="time"/>
-      </h1>
-      <h1>postimgsrc
-        <input type="text" ng-model="imgSrc"/>
-      </h1>
-      <h1>postimgalt
-        <input type="text" ng-model="imgAlt"/>
-      </h1>
-      <button type="button" name="button" ng-click="postPost(text,title,time,imgSrc,imgAlt)">SUBMIT POST</button>
-    </form>
-    <form>
-      <h1>DELETE POST WHERE POSTID = X</h1>
-      <h1>X
-        <input type="text" ng-model="del"/>
-      </h1>
-      <button type="button" ng-click="delPost(del)">DELETEPOST</button>
-    </form>
-    <form>
-      <h1>RATE MESSAGE</h1>
-      <h1>MESSAGE ID
-        <input type="text" ng-model="xid"/>
-      </h1>
-      <h1>RATING 1 - 10
-        <input type="text" ng-model="rating"/>
-      </h1>
-      <button type="button" ng-click="ratePost(xid,rating)">SUBMIT</button>
-    </form>
-  </section>
-  <section class="container">
-    <div class="message">
-      <table>
-        <tbody>
-          <th>
-            <tr>
-              <td>ID</td>
-              <td>NAME</td>
-              <td>EMAIL</td>
-              <td>MESSAGE</td>
-            </tr>
-          </th>
-          <tr ng-repeat="message in messages">
-            <td>{{message.messid}}</td>
-            <td>{{message.messname}}</td>
-            <td>{{message.messemail}}</td>
-            <td>{{message.messmess}}</td>
-          </tr>
-        </tbody>
-      </table>
-      <table>
-        <tr>
-          <td>ID</td>
-          <td>rating</td>
-        </tr>
-        <tr ng-repeat="x in ratings">
-          <td>{{x.postid}}</td>
-          <td>{{x.rating}}</td>
-        </tr>
-      </table>
-    </div>
-  </section>
-</div>
+<div id="secretPage"><section class="controls"><form><h1>posttext<textarea ng-model="text" rows="8" cols="40"></textarea></h1><h1>posttitle<input type="text" ng-model="title"/></h1><h1>posttime<input type="text" ng-model="time"/></h1><h1>postimgsrc<input type="text" ng-model="imgSrc"/></h1><h1>postimgalt<input type="text" ng-model="imgAlt"/></h1><button type="button" name="button" ng-click="postPost(text,title,time,imgSrc,imgAlt)">SUBMIT POST</button></form><form><h1>DELETE POST WHERE POSTID = X</h1><h1>X<input type="text" ng-model="del"/></h1><button type="button" ng-click="delPost(del)">DELETEPOST</button></form><form><h1>RATE MESSAGE</h1><h1>MESSAGE ID<input type="text" ng-model="xid"/></h1><h1>RATING 1 - 10<input type="text" ng-model="rating"/></h1><button type="button" ng-click="ratePost(xid,rating)">SUBMIT</button></form></section><section class="container"><div class="message"><table><tbody><th><tr><td>ID</td><td>NAME</td><td>EMAIL</td><td>MESSAGE</td></tr></th><tr ng-repeat="message in messages"><td>{{message.messid}}</td><td>{{message.messname}}</td><td>{{message.messemail}}</td><td>{{message.messmess}}</td></tr></tbody></table><table><tr><td>ID</td><td>rating</td></tr><tr ng-repeat="x in ratings"><td>{{x.postid}}</td><td>{{x.rating}}</td></tr></table></div></section></div>
