--- a/public/html/views/about.html
+++ b/public/html/views/about.html
@@ -1,73 +1,1 @@
-
-<div id="aboutPage">
-  <div id="aboutMe">
-    <header class="mainHeader"><img class="wow slideInLeft" src="https://avatars3.githubusercontent.com/u/16170598?v=3&amp;s=460" alt="A picture of me" data-wow-duration="1s"/>
-      <section>
-        <article class="wow fadeIn" data-wow-duration="1s">
-          <h2>Hi I'm Josh Peterson</h2>
-          <h4>I'm a student at DevMountain.</h4>
-          <h4>Honing my Web Development skills.</h4>
-        </article>
-      </section>
-    </header>
-    <section class="body">
-      <article class="wow fadeIn" data-wow-delay="2.2s">
-        <ul><a href="https://github.com/echoflame14" title="GitHub" target="_blank">
-            <li>
-              <h4>GitHub</h4>
-            </li></a><a href="https://www.linkedin.com/in/josh-peterson-b9093910b" title="Linkedin" target="_blank">
-            <li>
-              <h4>Linkedin</h4>
-            </li></a><a href="https://twitter.com/joshpdev" title="Twitter" target="_blank">
-            <li>
-              <h4>Twitter</h4>
-            </li></a></ul>
-      </article>
-    </section>
-  </div>
-  <div id="skills">
-    <header class="wow fadeInRight" data-wow-delay="1s">
-      <h1>SKILLS</h1>
-    </header>
-    <h4 class="wow fadeInRight fEnd" data-wow-delay="1.05s">FrontEnd</h4>
-    <section class="wow fadeInRight frontEnd" data-wow-delay="1.1s"><img class="disp" src="./img/frontEndMan.jpg"/>
-      <ul>
-        <li><img src="./img/HTML5.png"/>
-          <h4>HTML5 / Jade / Pug</h4>
-        </li>
-        <li><img src="./img/css.png"/>
-          <h4>CSS3 / Scss</h4>
-        </li>
-        <li><img src="./img/bootstrap.png"/>
-          <h4>Bootstrap</h4>
-        </li>
-        <li><img src="./img/js.png"/>
-          <h4>Javascript</h4>
-        </li>
-        <li><img src="./img/jq.png"/>
-          <h4>Jquery</h4>
-        </li>
-        <li><img src="./img/angular.png"/>
-          <h4>Angular.js</h4>
-        </li>
-        <li><img src="./img/git.png"/>
-          <h4>Git / Github</h4>
-        </li>
-      </ul>
-    </section>
-    <h4 class="wow fadeInRight bEnd" data-wow-delay="1.15s">back_End</h4>
-    <section class="wow fadeInRight backEnd" data-wow-delay="1.2s"><img class="disp" src="./img/backendPic.jpeg"/>
-      <ul>
-        <li><img src="./img/sql.png"/>
-          <h4>Sql / Postgress</h4>
-        </li>
-        <li><img src="./img/express.png"/>
-          <h4>Express</h4>
-        </li>
-        <li><img src="./img/node.png"/>
-          <h4>Node.js</h4>
-        </li>
-      </ul>
-    </section>
-  </div>
-</div>
+<div id="aboutPage"><div id="aboutMe"><header class="mainHeader"><img class="wow slideInLeft" src="https://avatars3.githubusercontent.com/u/16170598?v=3&amp;s=460" alt="A picture of me" data-wow-duration="1s"/><section><article class="wow fadeIn" data-wow-duration="1s"><h2>Hi I'm Josh Peterson</h2><h4>I'm a recent graduate of Devmountain</h4><h4>Honing my Web Development skills.</h4></article></section></header><section class="body"><article class="wow fadeIn" data-wow-delay="2.2s"><ul><a href="https://github.com/echoflame14" title="GitHub" target="_blank"><li><h4>GitHub</h4></li></a><a href="https://www.linkedin.com/in/josh-peterson-b9093910b" title="Linkedin" target="_blank"><li><h4>Linkedin</h4></li></a><a href="https://twitter.com/joshpdev" title="Twitter" target="_blank"><li><h4>Twitter</h4></li></a></ul></article></section></div><div id="skills"><header class="wow fadeInRight" data-wow-delay="1s"><h1>SKILLS</h1></header><h4 class="wow fadeInRight fEnd" data-wow-delay="1.05s">FrontEnd</h4><section class="wow fadeInRight frontEnd" data-wow-delay="1.1s"><img class="disp" src="./img/frontEndMan.jpg"/><ul><li><img src="./img/HTML5.png"/><h4>HTML5 / Jade / Pug</h4></li><li><img src="./img/css.png"/><h4>CSS3 / Scss</h4></li><li><img src="./img/bootstrap.png"/><h4>Bootstrap</h4></li><li><img src="./img/js.png"/><h4>Javascript</h4></li><li><img src="./img/jq.png"/><h4>Jquery</h4></li><li><img src="./img/angular.png"/><h4>Angular.js</h4></li><li><img src="./img/git.png"/><h4>Git / Github</h4></li></ul></section><h4 class="wow fadeInRight bEnd" data-wow-delay="1.15s">back_End</h4><section class="wow fadeInRight backEnd" data-wow-delay="1.2s"><img class="disp" src="./img/backendPic.jpeg"/><ul><li><img src="./img/sql.png"/><h4>Sql / Postgress</h4></li><li><img src="./img/express.png"/><h4>Express</h4></li><li><img src="./img/node.png"/><h4>Node.js</h4></li></ul></section></div></div>
