--- a/public/html/views/contact.html
+++ b/public/html/views/contact.html
@@ -1,50 +1,1 @@
-
-<div id="contactPage" ng-controller="ctrl">
-  <div class="wow fadeIn" id="deets" dada-wow-duration="0.2s">
-    <header>
-      <h1>Contact Details</h1>
-    </header>
-    <section>
-      <ul>
-        <li>
-          <h1>EMAIL</h1>
-          <h2>JoshPeterson.dev@gmail.com</h2>
-        </li>
-        <li>
-          <h1>PHONE</h1>
-          <h2 class="phone">(385) 445-0721</h2>
-        </li>
-        <li>
-          <h1>SKYPE</h1>
-          <h2>JoshPeterson15</h2>
-        </li>
-        <li class="linkedin">
-          <h1>LINKEDIN</h1><a href="https://www.linkedin.com/in/josh-peterson-b9093910b" target="__blank">
-            <h2>https://www.linkedin.com/in/josh-peterson-b9093910b</h2></a>
-        </li>
-      </ul>
-    </section>
-  </div>
-  <div class="wow fadeIn" id="message">
-    <header>
-      <h1>Send Me a Message</h1>
-    </header>
-    <section>
-      <form id="UsrMessage" method="get">
-        <section>
-          <h3>NAME</h3>
-          <input type="text" name="name" ng-model="name" id="name"/>
-        </section>
-        <section>
-          <h3>EMAIL</h3>
-          <input type="text" name="Email" ng-model="email" id="email"/>
-        </section>
-        <section class="bigBox">
-          <h3>MESSAGE</h3>
-          <textarea name="Message" rows="8" cols="40" id="bigBox" ng-model="message"></textarea>
-        </section>
-        <input type="submit" name="submit" id="submitBtn" value="SUBMIT" ng-click="postMessage(name,email,message)"/>
-      </form>
-    </section>
-  </div>
-</div>
+<div id="contactPage" ng-controller="ctrl"><div class="wow fadeIn" id="deets" dada-wow-duration="0.2s"><header><h1>Contact Details</h1></header><section><ul><li><h1>EMAIL</h1><h2>JoshPeterson.dev@gmail.com</h2></li><li><h1>PHONE</h1><h2 class="phone">(385) 445-0721</h2></li><li><h1>SKYPE</h1><h2>JoshPeterson15</h2></li><li class="linkedin"><h1>LINKEDIN</h1><a href="https://www.linkedin.com/in/josh-peterson-b9093910b" target="__blank"><h2>https://www.linkedin.com/in/josh-peterson-b9093910b</h2></a></li></ul></section></div><div class="wow fadeIn" id="message"><header><h1>Send Me a Message</h1></header><section><form id="UsrMessage" method="get"><section><h3>NAME</h3><input type="text" name="name" ng-model="name" id="name"/></section><section><h3>EMAIL</h3><input type="text" name="Email" ng-model="email" id="email"/></section><section class="bigBox"><h3>MESSAGE</h3><textarea name="Message" rows="8" cols="40" id="bigBox" ng-model="message"></textarea></section><input type="submit" name="submit" id="submitBtn" value="SUBMIT" ng-click="postMessage(name,email,message)"/></form></section></div></div>
